--- a/ExpenseManagerApplication/package.json
+++ b/ExpenseManagerApplication/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^3.3.1",
+    "@syncfusion/ej2": "^17.3.17",
+    "@syncfusion/ej2-angular-popups": "^17.3.16",
     "bootstrap": "^4.0.0-beta",
     "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
