--- a/ExpenseManagerApplication/package.json
+++ b/ExpenseManagerApplication/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@angular-devkit/build-angular": "^0.10.0",
     "@angular/animations": "~7.2.0",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
